center img container

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                         <div class="text-container">
-                            <p class="carousel-item_container_description">Concurs Biblioteca d'Arenys de Mar (finalista)</p>
+                            <div class="text-container_center">
+                                <p class="carousel-item_container_description">Concurs Biblioteca d'Arenys de Mar (finalista)</p>
+                            </div>
                         </div>    
                         <img src="statics/Concurs Biblioteca d'Arenys de Mar (finalista).jpg" alt="Concurs Biblioteca d'Arenys de Mar (finalista)" class="carousel-item_container_image">
                     </a>
@@ -29,7 +31,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Concurs Biblioteca d'Arenys de Mar (finalista)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Concurs Biblioteca d'Arenys de Mar (finalista)</p>
+                        </div>
                     </div>
                         <img src="statics/Concurs Biblioteca d'Arenys de Mar (finalista)(2).jpg" alt="Concurs Biblioteca d'Arenys de Mar (finalista) (2)" class="carousel-item_container_image">
                     </a>
@@ -39,7 +43,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Exposició Clarisses- passat, present i futur (2018) (1)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Exposició Clarisses- passat, present i futur (2018)</p>
+                        </div>
                     </div>
                         <img src="statics/Exposició Clarisses- passat, present i futur (2018)(1).jpg" alt="Exposició Clarisses- passat, present i futur (2018) (1)" class="carousel-item_container_image">
                     </a>
@@ -49,7 +55,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Exposició Clarisses- passat, present i futur (2018) (2)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Exposició Clarisses- passat, present i futur (2018)</p>
+                        </div>
                     </div>
                         <img src="statics/Exposició Clarisses-passat, present i futur (2018)(2).jpg" alt="Exposició Clarisses- passat, present i futur (2018) (2)" class="carousel-item_container_image">
                     </a>
@@ -59,7 +67,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Festival A Cel Obert 2018(1)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Festival A Cel Obert 2018</p>
+                        </div>
                     </div>
                         <img src="statics/Festival A Cel Obert 2018(1).jpg" alt="Festival A Cel Obert 2018(1)" class="carousel-item_container_image">
                     </a>
@@ -69,7 +79,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Festival A Cel Obert 2018(2)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Festival A Cel Obert 2018</p>
+                        </div>
                     </div>
                         <img src="statics/Festival A Cel Obert 2018(2).jpg" alt="Festival A Cel Obert 2018(2)" class="carousel-item_container_image">
                     </a>
@@ -79,7 +91,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Festival Lluèrnia 2016(1)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Festival Lluèrnia 2016</p>
+                        </div>
                     </div>
                         <img src="statics/Festival Lluèrnia 2016(1).jpg" alt="Festival Lluèrnia 2016(1)" class="carousel-item_container_image">
                     </a>
@@ -89,7 +103,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Festival Lluèrnia 2016(2)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Festival Lluèrnia 2016</p>
+                        </div>
                     </div>
                         <img src="statics/Festival Lluèrnia 2016(2).jpg" alt="Festival Lluèrnia 2016(2)" class="carousel-item_container_image">
                     </a>
@@ -99,7 +115,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Festival Perpetracions 2018(1)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Festival Perpetracions 2018</p>
+                        </div>
                     </div>
                         <img src="statics/Festival Perpetracions 2018(1).jpg" alt="Festival Perpetracions 2018(1)" class="carousel-item_container_image">
                     </a>
@@ -109,7 +127,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Festival Perpetracions 2018(2)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Festival Perpetracions 2018</p>
+                        </div>
                     </div>
                         <img src="statics/Festival Perpetracions 2018(2).jpg" alt="Festival Perpetracions 2018(2)" class="carousel-item_container_image">
                     </a>
@@ -119,7 +139,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Festival Tudanzas 2015</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Festival Tudanzas 2015</p>
+                        </div>
                     </div>
                         <img src="statics/Festival Tudanzas 2015.jpg" alt="Festival Tudanzas 2015" class="carousel-item_container_image">
                     </a>
@@ -129,7 +151,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Prototip Showroom modular (1)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Prototip Showroom modular</p>
+                        </div>
                     </div>
                         <img src="statics/Prototip Showroom modular (1).jpg" alt="Prototip Showroom modular (1)" class="carousel-item_container_image">
                     </a>
@@ -139,7 +163,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Prototip Showroom modular (2)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Prototip Showroom modular</p>
+                        </div>
                     </div>
                         <img src="statics/Prototip Showroom modular (2).jpg" alt="Prototip Showroom modular (2)" class="carousel-item_container_image">
                     </a>
@@ -149,7 +175,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Reforma Malats (en curs)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Reforma Malats (en curs)</p>
+                        </div>
                     </div>
                         <img src="statics/Reforma Malats (en curs).jpg" alt="Reforma Malats (en curs)" class="carousel-item_container_image">
                     </a>
@@ -159,7 +187,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Reforma Sant Adrià (en curs)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Reforma Sant Adrià (en curs)</p>
+                        </div>
                     </div>
                         <img src="statics/Reforma Sant Adrià (en curs).jpg" alt="Reforma Sant Adrià (en curs)" class="carousel-item_container_image">
                     </a>
@@ -169,7 +199,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Stands Espai Ciència (Saló de l'Ensenyament 2018)(1)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Stands Espai Ciència (Saló de l'Ensenyament 2018)(1)</p>
+                        </div>
                     </div>
                         <img src="statics/Stands Espai Ciència (Saló de l'Ensenyament 2018)(1).jpg" alt="Stands Espai Ciència (Saló de l'Ensenyament 2018)(1)" class="carousel-item_container_image">
                     </a>
@@ -179,7 +211,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Stands Espai Ciència (Saló de l'Ensenyament 2018)(2)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Stands Espai Ciència (Saló de l'Ensenyament 2018)</p>
+                        </div>
                     </div>
                         <img src="statics/Stands Espai Ciència (Saló de l'Ensenyament 2018)(2).jpg" alt="Stands Espai Ciència (Saló de l'Ensenyament 2018)(2)" class="carousel-item_container_image">
                     </a>
@@ -189,7 +223,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Stands Espai Ciència (Saló de l'Ensenyament 2019)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Stands Espai Ciència (Saló de l'Ensenyament 2019)</p>
+                        </div>
                     </div>
                         <img src="statics/Stands Espai Ciència (Saló de l'Ensenyament 2019).jpg" alt="Stands Espai Ciència (Saló de l'Ensenyament 2019)" class="carousel-item_container_image">
                     </a>
@@ -199,7 +235,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Stands Firantoni 2015(1)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Stands Firantoni 2015</p>
+                        </div>
                     </div>
                         <img src="statics/Stands Firantoni 2015(1).jpg" alt="Stands Firantoni 2015(1)" class="carousel-item_container_image">
                     </a>
@@ -209,7 +247,9 @@
                 <div class="carousel-item_container">
                     <a href="" class="carousel-item_container_link">
                     <div class="text-container">
-                        <p class="carousel-item_container_description">Stands Firantoni 2015(2)</p>
+                        <div class="text-container_center">
+                            <p class="carousel-item_container_description">Stands Firantoni 2015</p>
+                        </div>
                     </div>
                         <img src="statics/Stands Firantoni 2015(2).jpg" alt="Stands Firantoni 2015(2)" class="carousel-item_container_image">
                     </a>
