--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" media="screen and (min-device-width: 49em)" href="styles/styles.css">
+    <link rel="stylesheet" media="screen and (max-device-width: 48em)" href="styles/styles-mobile.css">
     <title>Midori Arquitectura</title>
 </head>
 
