--- a/index.html
+++ b/index.html
@@ -15,248 +15,7 @@
         <div id="logo">
             <img src="statics/midori_logomaster.png" alt="Midori Logo" class="logo_midori">
         </div>
-        <ul id="carousel">
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                        <div class="text-container">
-                            <div class="text-container_center">
-                                <p class="carousel-item_container_description">Concurs Biblioteca d'Arenys de Mar (finalista)</p>
-                            </div>
-                        </div>    
-                        <img src="statics/Concurs Biblioteca d'Arenys de Mar (finalista).jpg" alt="Concurs Biblioteca d'Arenys de Mar (finalista)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Concurs Biblioteca d'Arenys de Mar (finalista)</p>
-                        </div>
-                    </div>
-                        <img src="statics/Concurs Biblioteca d'Arenys de Mar (finalista)(2).jpg" alt="Concurs Biblioteca d'Arenys de Mar (finalista) (2)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Exposició Clarisses- passat, present i futur (2018)</p>
-                        </div>
-                    </div>
-                        <img src="statics/Exposició Clarisses- passat, present i futur (2018)(1).jpg" alt="Exposició Clarisses- passat, present i futur (2018) (1)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Exposició Clarisses- passat, present i futur (2018)</p>
-                        </div>
-                    </div>
-                        <img src="statics/Exposició Clarisses-passat, present i futur (2018)(2).jpg" alt="Exposició Clarisses- passat, present i futur (2018) (2)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Festival A Cel Obert 2018</p>
-                        </div>
-                    </div>
-                        <img src="statics/Festival A Cel Obert 2018(1).jpg" alt="Festival A Cel Obert 2018(1)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Festival A Cel Obert 2018</p>
-                        </div>
-                    </div>
-                        <img src="statics/Festival A Cel Obert 2018(2).jpg" alt="Festival A Cel Obert 2018(2)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Festival Lluèrnia 2016</p>
-                        </div>
-                    </div>
-                        <img src="statics/Festival Lluèrnia 2016(1).jpg" alt="Festival Lluèrnia 2016(1)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Festival Lluèrnia 2016</p>
-                        </div>
-                    </div>
-                        <img src="statics/Festival Lluèrnia 2016(2).jpg" alt="Festival Lluèrnia 2016(2)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Festival Perpetracions 2018</p>
-                        </div>
-                    </div>
-                        <img src="statics/Festival Perpetracions 2018(1).jpg" alt="Festival Perpetracions 2018(1)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Festival Perpetracions 2018</p>
-                        </div>
-                    </div>
-                        <img src="statics/Festival Perpetracions 2018(2).jpg" alt="Festival Perpetracions 2018(2)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Festival Tudanzas 2015</p>
-                        </div>
-                    </div>
-                        <img src="statics/Festival Tudanzas 2015.jpg" alt="Festival Tudanzas 2015" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Prototip Showroom modular</p>
-                        </div>
-                    </div>
-                        <img src="statics/Prototip Showroom modular (1).jpg" alt="Prototip Showroom modular (1)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Prototip Showroom modular</p>
-                        </div>
-                    </div>
-                        <img src="statics/Prototip Showroom modular (2).jpg" alt="Prototip Showroom modular (2)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Reforma Malats (en curs)</p>
-                        </div>
-                    </div>
-                        <img src="statics/Reforma Malats (en curs).jpg" alt="Reforma Malats (en curs)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Reforma Sant Adrià (en curs)</p>
-                        </div>
-                    </div>
-                        <img src="statics/Reforma Sant Adrià (en curs).jpg" alt="Reforma Sant Adrià (en curs)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Stands Espai Ciència (Saló de l'Ensenyament 2018)(1)</p>
-                        </div>
-                    </div>
-                        <img src="statics/Stands Espai Ciència (Saló de l'Ensenyament 2018)(1).jpg" alt="Stands Espai Ciència (Saló de l'Ensenyament 2018)(1)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Stands Espai Ciència (Saló de l'Ensenyament 2018)</p>
-                        </div>
-                    </div>
-                        <img src="statics/Stands Espai Ciència (Saló de l'Ensenyament 2018)(2).jpg" alt="Stands Espai Ciència (Saló de l'Ensenyament 2018)(2)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Stands Espai Ciència (Saló de l'Ensenyament 2019)</p>
-                        </div>
-                    </div>
-                        <img src="statics/Stands Espai Ciència (Saló de l'Ensenyament 2019).jpg" alt="Stands Espai Ciència (Saló de l'Ensenyament 2019)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Stands Firantoni 2015</p>
-                        </div>
-                    </div>
-                        <img src="statics/Stands Firantoni 2015(1).jpg" alt="Stands Firantoni 2015(1)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-            <li class="carousel-item">
-                <div class="carousel-item_container">
-                    <a href="" class="carousel-item_container_link">
-                    <div class="text-container">
-                        <div class="text-container_center">
-                            <p class="carousel-item_container_description">Stands Firantoni 2015</p>
-                        </div>
-                    </div>
-                        <img src="statics/Stands Firantoni 2015(2).jpg" alt="Stands Firantoni 2015(2)" class="carousel-item_container_image">
-                    </a>
-                </div>
-            </li>
-        </ul>
+        <ul id="carousel"></ul>
 
         <div id="footer">
             <div class="contact">
@@ -289,5 +48,6 @@
         </div>
     </div>
     <script src="scripts/carousel.js"></script>
+    <script src="scripts/create.js" type="module"></script>
 </body>
 </html>
